# llvm-typescript

./: README.md
clang/include/clang/Driver/: Options.h  Options.td
clang/lib/Driver/: CMakeLists.txt
clang/lib/Driver/ToolChains/: TSlang.cpp  TSlang.h
llvm/: CMakeLists.txt
llvm/tools/: CMakeLists.txt
tslang/: CMakeLists.txt
tslang/cmake/modules/: AddTSlang.cmake  CMakeLists.txt  TSlangConfig.cmake.in
tslang/docs/: C++17.md  C++style.md  CMakeLists.txt
tslang/examples/: CMakeLists.txt
tslang/include/: CMakeLists.txt
tslang/include/tslang/: Version.inc.in
tslang/include/tslang/Config/: config.h.cmake
tslang/include/tslang/Optimizer/CodeGen/: CMakeLists.txt
tslang/include/tslang/Optimizer/Dialect/: CMakeLists.txt
tslang/include/tslang/Optimizer/Transforms/: CMakeLists.txt
tslang/lib/: CMakeLists.txt
tslang/runtime/: CMakeLists.txt
tslang/test/: CMakeLists.txt
tslang/tools/: CMakeLists.txt
tslang/tools/ts18/: CMakeLists.txt  tslang
tslang/unittests/: CMakeLists.txt
